Bug 692742 - GCLI popup dialogs sometimes have scrollbars; f=paul; r=dcamp,dao
UltraBlame original commit: c9ef187ce6bdf7eb1f27ffd62808c646df7b87d4

--- a/browser/themes/pinstripe/devtools/gcli.css
+++ b/browser/themes/pinstripe/devtools/gcli.css
@@ -49,12 +49,43 @@ Console
 "
 monospace
 ;
+}
+.
+gcliterm
+-
+input
+-
+node
+{
 padding
+-
+top
 :
 2px
+;
+padding
+-
+bottom
+:
 0
-0
+;
+-
+moz
+-
+padding
+-
+start
+:
 16px
+;
+-
+moz
+-
+padding
+-
+end
+:
+0
 ;
 }
 .
@@ -70,11 +101,34 @@ color
 FFF
 ;
 padding
+-
+top
 :
 4px
-4px
+;
+padding
+-
+bottom
+:
 2px
+;
+-
+moz
+-
+padding
+-
+start
+:
 21px
+;
+-
+moz
+-
+padding
+-
+end
+:
+4px
 ;
 }
 .
@@ -174,41 +228,64 @@ width
 .
 gcliterm
 -
+argfetcher
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+.
+gcliterm
+-
 hint
 -
 node
 {
-color
-:
-#
-000
-;
-background
-:
-rgba
-(
-250
-250
-250
-0
-.
-8
-)
-;
 border
+-
+top
 :
 1px
 solid
-#
-AAA
+threedshadow
 ;
 border
 -
 bottom
 :
-0px
-!
-important
+1px
+solid
+#
+FFF
+;
+border
+-
+left
+:
+1px
+solid
+threedshadow
+;
+border
+-
+right
+:
+1px
+solid
+threedshadow
 ;
 border
 -
@@ -232,29 +309,10 @@ radius
 ;
 margin
 -
-left
+bottom
 :
-10px
-;
-margin
 -
-right
-:
-10px
-;
-display
-:
-inline
--
-block
-;
-overflow
-:
-auto
-;
-padding
-:
-10px
+1px
 ;
 }
 .
@@ -264,14 +322,31 @@ hint
 -
 parent
 {
+width
+:
+300px
+;
+padding
+:
+10px
+10px
+0
+;
+border
+-
+top
+:
+1px
+solid
+threedshadow
+;
 border
 -
 bottom
 :
 1px
 solid
-#
-AAA
+threedshadow
 ;
 }
 .
@@ -282,6 +357,144 @@ text
 align
 :
 right
+;
+}
+.
+gcliterm
+-
+menu
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
+.
+gcliterm
+-
+hint
+-
+nospace
+{
+display
+:
+none
+;
+}
+.
+gcliterm
+-
+input
+-
+node
+.
+gcliterm
+-
+complete
+-
+node
+.
+gcliterm
+-
+display
+{
+direction
+:
+ltr
+;
+}
+.
+gcliterm
+-
+hint
+-
+parent
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+hud
+-
+output
+-
+node
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+direction
+:
+rtl
+;
+}
+.
+gcliterm
+-
+complete
+-
+node
+{
+padding
+-
+top
+:
+6px
+!
+important
+;
+}
+.
+gcliArgFetcher
+{
+width
+:
+100
+%
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+-
+moz
+-
+box
+-
+sizing
+:
+border
+-
+box
 ;
 }
 .
@@ -305,20 +518,11 @@ bottom
 :
 5px
 ;
-border
--
-bottom
-:
-1px
-solid
-#
-ddd
-;
 padding
--
-bottom
 :
 3px
+10px
+0
 ;
 }
 .
@@ -397,17 +601,56 @@ font
 -
 size
 :
-80
+90
 %
 ;
 color
 :
 #
-666
+f66
+;
+padding
+-
+left
+:
+5px
 ;
 }
 .
 gcliParams
+{
+padding
+:
+0
+10px
+;
+width
+:
+100
+%
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+-
+moz
+-
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+.
+gcliField
 {
 width
 :
@@ -416,105 +659,16 @@ width
 ;
 }
 .
-gcliHintParent
+gcliMenu
 {
-color
+width
 :
-#
-000
-;
-background
-:
-rgba
-(
-250
-250
-250
-0
-.
-8
-)
-;
-border
-:
-1px
-solid
-#
-AAA
-;
-border
--
-top
--
-right
--
-radius
-:
-5px
-;
-border
--
-top
--
-left
--
-radius
-:
-5px
-;
-margin
--
-left
-:
-10px
-;
-margin
--
-right
-:
-10px
-;
-display
-:
-inline
--
-block
+100
+%
 ;
 overflow
 :
 hidden
-;
-}
-.
-gcliHints
-{
-overflow
-:
-auto
-;
-padding
-:
-10px
-;
-display
-:
-inline
--
-block
-;
-}
-.
-gcliHints
-ul
-{
-margin
-:
-0
-;
-padding
-:
-0
-15px
 ;
 }
 .
@@ -561,9 +715,33 @@ gcliOptionName
 {
 padding
 -
-right
+top
 :
-5px
+0
+;
+padding
+-
+bottom
+:
+0
+;
+-
+moz
+-
+padding
+-
+start
+:
+10px
+;
+-
+moz
+-
+padding
+-
+end
+:
+2px
 ;
 }
 .
@@ -596,10 +774,33 @@ space
 nowrap
 ;
 padding
+-
+top
 :
 8px
+;
+padding
+-
+bottom
+:
 2px
-2px
+;
+-
+moz
+-
+padding
+-
+start
+:
+10px
+;
+-
+moz
+-
+padding
+-
+end
+:
 2px
 ;
 font
@@ -617,16 +818,6 @@ red
 .
 gcliMenuField
 {
-background
--
-color
-:
-white
-;
-color
-:
-black
-;
 border
 :
 1px
@@ -634,46 +825,11 @@ solid
 #
 aaa
 ;
-padding
-:
-2px
-;
-max
--
-height
-:
-300px
-;
-overflow
--
-y
-:
-auto
-;
-max
--
-width
-:
-220px
-;
-overflow
--
-x
-:
-hidden
-;
-margin
-:
-0px
-10px
-;
 border
 -
 top
 :
-0px
-!
-important
+0
 ;
 border
 -
@@ -695,6 +851,41 @@ radius
 :
 5px
 ;
+max
+-
+height
+:
+300px
+;
+margin
+:
+0
+3px
+;
+padding
+:
+0
+;
+}
+#
+gcliOptTempl
+{
+border
+-
+collapse
+:
+collapse
+;
+width
+:
+100
+%
+;
+margin
+:
+10px
+0
+;
 }
 .
 gcliCompletion
@@ -709,13 +900,6 @@ index
 :
 -
 1000
-;
-background
--
-color
-:
-#
-DDD
 ;
 border
 :
